fix: 依存ロードが失敗を記憶する掛け金になっていたのを直す
load() は仕事をする前に loaded = true を立てていた。展開が一度でも失敗
すると以降の呼び出しは全部「ロード済み」として素通りし、空の classloader
のまま Class.forName に進む。利用者に見える症状は毎回同じ「LavaPlayer
loader を初期化できない」だけで、最初の 1 回に投げられた本当の原因は
どこにも出てこない。walkPacked が IOException を握り潰して空集合を返す
経路では、例外すら出ずに空の classloader ができていた。

掛け金 (DependencyLoadGate):
- 成功してからしか立たない。一時的な失敗なら次の呼び出しでそのまま直る
- 再試行は 3 回で打ち切る。打ち切った後も黙って素通りさせず、覚えておいた
  原因を毎回 cause に付けて投げ直す
- 同梱 jar が 0 個ならそこで止める (空の classloader を組み立てない)
- walkPacked は読めなかったことを呼び出し側へ返す

展開 (ExtractionPlan + DependencyManager):
- 展開先は同梱 jar 一式の指紋で決まる固定の場所。起動のたびに 34MB を
  展開し直すのをやめる = 毎回開けていた失敗の窓を閉じる
- 全ファイルの設置後にだけ完了マーカーを書き、次回はマーカーと各ファイルの
  サイズを見て展開ごと飛ばす
- 一時名で書いてから ATOMIC_MOVE で置くので、同時起動しても書きかけの
  ファイルを掴まない。Windows で別インスタンスが jar を開いていて上書きが
  拒否される場合は、中身が既に正しいなら成功として扱う
- 古い指紋の掃除は best effort。最近触られたディレクトリは残す (別バージョンが
  同時に起動していると、相手が書き込み中のディレクトリを消してしまう)

temp が使えない環境 (権限・空き・ウイルス対策の隔離) 向けに、JVM の作業
ディレクトリ配下へ退避する経路を足す。退避したときは解決済みの絶対パスと
理由を warn に出し、両方落ちたら両方の原因を繋いだ例外で止まる。

GameTest 5 本を追加 (83 → 88)。